    and errors that were found while parsing a date/time string through:
    . strtotime() / new DateTime
    . date_create_from_format() / DateTime::createFromFormat()
    . date_parse_from_format()
  . support for abbreviation and offset based timezone specifiers for
    DateTime::getOffset() and DateTime::getName().
  . support for selectively listing timezone identifiers through
    timezone_identifiers_list() / DateTimezone::listIdentifiers().
  . date_timestamp_set() / DateTime::setTimestamp() to set a Unix timestamp
    without invoking the date parser. (Scott)
  . date_timestamp_get() / DateTime::getTimestamp() to retrieve the Unix
    timestamp belonging to a date object.
  . two optional parameters to timezone_transitions_get() /
    DateTimeZone::getTranstions() to limit the range of transitions being
    returned.
  . support for "first/last day of <month>" style texts.
  . support for date/time strings returned by MS SQL.
  . support for serialization and unserialization of DateTime objects.
  . support for diffing date/times through date_diff() / DateTime::diff().
  . support for adding/subtracting weekdays with strtotime() and
    DateTime::modify().
  . added DateInterval class to represent the difference between two date/times.
  . support for parsing ISO intervals for use with DateInterval.
  . date_add() / DateTime::add(), date_sub() / DateTime::sub() for applying an
    interval to an existing date/time.
  . proper support for "this week", "previous week"/"last week" and "next week"
    phrases so that they actually mean the week and not a seven day period
    around the current day.
  . support for "<xth> <weekday of" and "last <weekday> of" phrases to be used
    with months - like in "last saturday of februari 2008".
  . added the DatePeriod class, that supports iterating over a DateTime object
    applying a DateInterval on each iteration, up to an end date or limited by
    a maximum number of occurences.
